<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.4.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>at.jku.dke.slotmachine</groupId>
    <artifactId>optimizer</artifactId>
    <version>1.0.2</version>
    <name>SlotMachine-Optimizer</name>
    <description>The Heuristic Optimizer of the SlotMachine system</description>
    <properties>
        <java.version>16</java.version>
        <log4j2.version>2.17.1</log4j2.version>
        <springfox.version>2.6.1</springfox.version>
        <jenetics.version>6.3.0</jenetics.version>
        <optaplanner.version>8.14.0.Final</optaplanner.version>
        <slma-object.version>1.0.15</slma-object.version>
    </properties>
    <dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-log4j2</artifactId>
		</dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
	       <groupId>io.springfox</groupId>
	       <artifactId>springfox-swagger2</artifactId>
	       <version>${springfox.version}</version>
	    </dependency>

	   <dependency>
	       <groupId>io.springfox</groupId>
	       <artifactId>springfox-swagger-ui</artifactId>
           <version>${springfox.version}</version>
	   </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jenetics</groupId>
            <artifactId>jenetics</artifactId>
            <version>${jenetics.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jenetics</groupId>
            <artifactId>jenetics.ext</artifactId>
            <version>${jenetics.version}</version>
        </dependency>

        <dependency>
            <groupId>org.optaplanner</groupId>
            <artifactId>optaplanner-core</artifactId>
            <version>${optaplanner.version}</version>
        </dependency>
        <dependency>
            <groupId>org.optaplanner</groupId>
            <artifactId>optaplanner-persistence-jpa</artifactId>
            <version>${optaplanner.version}</version>
        </dependency>       
        <dependency>
	    	<groupId>org.optaplanner</groupId>
	    	<artifactId>optaplanner-benchmark</artifactId>
            <version>${optaplanner.version}</version>
	  	</dependency>

        <dependency>
            <groupId>com.frequentis.slotmachine</groupId>
            <artifactId>slma-object</artifactId>
            <version>${slma-object.version}</version>
        </dependency>
    </dependencies>


    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

</project>
